--- a/css/music.css
+++ b/css/music.css
@@ -47,7 +47,7 @@ a {
 #player {
   width: 500px;
   height: 130px;
-  padding: 25px;
+  padding: 25px 0;
   margin: 50px auto 50px;
   position: relative;
 }
@@ -237,7 +237,7 @@ a {
 
 #playlist {
   background: rgba(0, 0, 0, 0.5);
-  width: 470px;
+  width: 100%;
   margin: 0 auto 50px;
   padding: 10px 15px;
   list-style: none;
@@ -288,4 +288,16 @@ footer a {
 }
 footer a:hover {
   text-decoration: none;
+}
+
+@media screen and (max-width:510px){
+  #player{
+    width:100%;
+  }
+  #player .ctrl{
+    width:100%;
+  }
+  #player .cover {
+    display: none;
+  }
 }
