--- a/css/style.css
+++ b/css/style.css
@@ -61,17 +61,40 @@ form {
 
 .github_page{
 	position:fixed;
-	left:5px;
-	bottom:0;
-	width:30px;
-	height:30px;
-	background:#0090ff url('http://www.bootcss.com/p/sco.js/assets/img/blacktocat.png') no-repeat;
-	background-size:100% 100%;
+	left:10px;
+	bottom:10px;
+	width:40px;
+	height:40px;
+	background:#0090ff url('../img/blacktocat.png') no-repeat center center;
+	background-size:80% 80%;
 	border-radius:3px;
-	opacity:0.8;
+	opacity:0.5;
 }
 .github_page a{
 	display:block;
-	width:30px;
-	height:30px;
+	width:100%;
+	height:100%;
+}
+
+.github_page{
+-webkit-animation:wobble 1s .2s ease both infinite;
+-moz-animation:wobble 1s .2s ease both infinite;
+}
+@-webkit-keyframes wobble{
+0%{-webkit-transform:translateX(0%)}
+15%{-webkit-transform:translateX(-25%) rotate(-5deg)}
+30%{-webkit-transform:translateX(20%) rotate(3deg)}
+45%{-webkit-transform:translateX(-15%) rotate(-3deg)}
+60%{-webkit-transform:translateX(10%) rotate(2deg)}
+75%{-webkit-transform:translateX(-5%) rotate(-1deg)}
+100%{-webkit-transform:translateX(0%)}
+}
+@-moz-keyframes wobble{
+0%{-moz-transform:translateX(0%)}
+15%{-moz-transform:translateX(-25%) rotate(-5deg)}
+30%{-moz-transform:translateX(20%) rotate(3deg)}
+45%{-moz-transform:translateX(-15%) rotate(-3deg)}
+60%{-moz-transform:translateX(10%) rotate(2deg)}
+75%{-moz-transform:translateX(-5%) rotate(-1deg)}
+100%{-moz-transform:translateX(0%)}
 }
