--- a/css/music.css
+++ b/css/music.css
@@ -236,6 +236,9 @@ a {
 }
 
 #playlist {
+  max-height:500px;
+  overflow:scroll;
+  overflow-x:hidden;
   background: rgba(0, 0, 0, 0.5);
   width: 100%;
   margin: 0 auto 50px;
