--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 	margin-top:10px;
 	margin-bottom:10px;
 }
-.intro-title{
+h3.intro-title{
 	font-family:'Microsoft YaHei';
 	margin-bottom:20px;
 	color:rgba(10,110,150,1);
